--- a/package.json
+++ b/package.json
@@ -25,9 +25,10 @@
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.1.0",
+    "angularfire2": "^5.2.1",
     "cordova-android": "8.0.0",
     "core-js": "^2.5.4",
-    "firebase": "^6.2.2",
+    "firebase": "^6.2.4",
     "rxjs": "~6.5.1",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.29"
